--- a/src/app/common-shipment/deliveryorder/deliveryorder-edit/deliveryorder-edit.component.html
+++ b/src/app/common-shipment/deliveryorder/deliveryorder-edit/deliveryorder-edit.component.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h5>{{title}}</h5>
+  <h5>Delivery Order</h5> <!-- if used {{title}} menu name will be displayed-->
   <app-history [inputdata]="{table: 'cargo_delivery_order', id:mform.get('do_parent_id')?.value}"></app-history>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
