--- a/src/app/common-shipment/deliveryorder/deliveryorder-list/deliveryorder-list.component.html
+++ b/src/app/common-shipment/deliveryorder/deliveryorder-list/deliveryorder-list.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="page-search">
-  <app-deliveryorder-search [search_url]="'/api/CommonShipment/deliveryorder/GetListAsync'" [input]="ms.getSearchRecord()"
+  <app-deliveryorder-search [search_url]="'/api/CommonShipment/deliveryorder/GetListAsync'" [input]="ms.getSearchRecord()" [print]="this.Print"
     (searchResult)="search($event)" [parent_type]="parent_type"></app-deliveryorder-search>
 </div>
 
