--- a/src/app/seaexport/coo/coo-edit/coo-edit.component.html
+++ b/src/app/seaexport/coo/coo-edit/coo-edit.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="page-header">
-      <h5>Certificate of Origin</h5>
+      <h5>{{title}}</h5>
       <app-history [inputdata]="{table: 'cargo_coo', id:id}"></app-history>
       <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
     </div>
