--- a/src/app/seaexport/seaexporth/seaexporth-search/seaexporth-search.component.html
+++ b/src/app/seaexport/seaexporth/seaexporth-search/seaexporth-search.component.html
@@ -14,6 +14,12 @@
         </div>
       </div>
       <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Ref No</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="hbl_mbl_refno" case="UPPER"> </app-input>
+        </div>
+      </div>
+      <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">House No</label>
         <div class="col-sm-8">
           <app-input type="text" formControlName="hbl_houseno" case="UPPER"> </app-input>
