--- a/src/app/airexport/airexporth/airexporth-search/airexporth-search.component.html
+++ b/src/app/airexport/airexporth/airexporth-search/airexporth-search.component.html
@@ -15,6 +15,12 @@
         </div>
       </div>
       <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Ref No</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="hbl_mbl_refno" [case]="'UPPER'"> </app-input>
+        </div>
+      </div>
+      <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">House No</label>
         <div class="col-sm-8">
           <app-input type="text" formControlName="hbl_houseno" [case]="'UPPER'"> </app-input>
@@ -24,12 +30,8 @@
     <div class="col-sm-6">
       <div class="form-group row">
         <div class="col-sm-12">
-          <label class="form-lable-sm form-label"></label>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-12">
-          <button class="btn btn-sm btn-success" (click)="search('search')">Search</button>
+          <button class="btn btn-sm btn-success me-1" (click)="search('SEARCH')">Search</button>
+          <button class="btn btn-sm btn-success me-1" *ngIf="print" (click)="search('PRINT')">Print</button>
         </div>
       </div>
     </div>
