--- a/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
+++ b/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
@@ -30,7 +30,7 @@
               <label class="col-sm-4 form-label form-lable-sm">Stage</label>
               <div class="col-sm-8">
                 <auto-complete formControlName="mbl_shipment_stage_name" name="mbl_shipment_stage_name"
-                  id="mbl_shipment_stage_name" (CallBack)="callBack($event)" table="param" subtable="SHIPSTAGE AE"
+                  id="mbl_shipment_stage_name" (CallBack)="callBack($event)" table="param" subtable="SHIPSTAGE AI"
                   [company_id]="getCompanyId()" [url]="url" case="upper"
                   display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
               </div>
@@ -235,7 +235,7 @@
               <tbody formArrayName="air_import">
                 <tr *ngFor="let iRow of formArray('air_import').controls; let i=index;" [formGroupName]="i">
                   <td align="centre" class="link" routerLink="/airimport/airimporthEdit"
-                    [queryParams]="{id :iRow.get('hbl_id')?.value ,mode:'edit',menuid:'AIRIMPORTH',type:'AIRIMPORTH',appid:appid,mbl_id:mform.get('mbl_id')?.value}">
+                    [queryParams]="{id :iRow.get('hbl_id')?.value ,mode:'edit',menuid:'AIR-IMPORT-H',type:'AIR-IMPORT-H',appid:appid,mbl_id:mform.get('mbl_id')?.value}">
                     <!-- (click)="editdetails(i)"  -->
                     <i class="fa fa-pencil"></i>
                   </td>
@@ -294,7 +294,7 @@
             <div class="col-sm-12" *ngIf="mode=='edit'">
               <button class="btn btn-sm btn-success" *ngIf="{mode:'add'}" routerLink="/airimport/airimporthEdit"
                 type="button"
-                [queryParams]="{id : 0 ,mode:'add', menuid:'AIRIMPORTH', type:'AIRIMPORTH', appid: appid, mbl_id: mform.get('mbl_id')?.value}">Add
+                [queryParams]="{id : 0 ,mode:'add', menuid:'AIR-IMPORT-H', type:'AIR-IMPORT-H', appid: appid, mbl_id: mform.get('mbl_id')?.value}">Add
                 House</button>
             </div>
           </div>
@@ -314,26 +314,21 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="d-grid gap-1">
-               <button class="btn btn-success btn-sm">POD</button>
-              <button class="btn btn-success btn-sm">AR & AP</button>
+              <button class="btn btn-success btn-sm">POD</button>
+              <button *ngIf="gs.IsUserRightsExits('AIR-IMPORT-INVOICE')" class="btn btn-success btn-sm" type="button" routerLink="/accounts/invoicemList"
+                [queryParams]="{id : 0, menuid:'AIR-IMPORT-INVOICE', appid: appid, parent_id: mform.get('mbl_id')?.value, parent_type:mform.get('mbl_mode')?.value}">AR & AP</button>
               <button class="btn btn-success btn-sm">PROFIT REPORT</button>
               <button class="btn btn-success btn-sm">SHIPMENT LABEL</button>
-              <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/messengerslipDetList"
-                [queryParams]="{id : 0 ,mode:'add', menuid:'MESSENGER-SLIP', type:'MESSENGER-SLIP', appid: appid,
-                parent_id: mform.get('mbl_id')?.value,parent_type:mform.get('mbl_mode')?.value}">MESSENGER
-                SLIP</button>
+              <button *ngIf="gs.IsUserRightsExits('AIR-IMPORT-SLIP')" class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/messengerslipDetList"
+                [queryParams]="{id : 0 ,mode:'add', menuid:'AIR-IMPORT-SLIP', type:'AIR-IMPORT-SLIP', appid: appid, parent_id: mform.get('mbl_id')?.value,parent_type:mform.get('mbl_mode')?.value}">MESSENGER SLIP</button>
               <button class="btn btn-success btn-sm">PAYMENT REQUEST</button>
-              <app-fileupload
-                [inputdata]="{mode:'add', id:id, parent_type: 'AIR IMPORT', rec_files_count: mform.get('rec_files_count')?.value, rec_files_attached: mform.get('rec_files_attached')?.value}"></app-fileupload>
-              <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/followupEdit"
-                [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, parent_id: mform.get('mbl_id')?.value, parent_type:mform.get('mbl_mode')?.value}">ADD
-                TO FOLLOW UP</button>
-              <!-- <button class="btn btn-success btn-sm" routerLink="/common-shipment/memoEdit"
-                [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'AIRIMP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">INTERNAL
-                MEMO</button> -->
-                <button class="btn btn-sm" [ngClass]="(mform.get('rec_memo_attached')?.value === 'Y') ? 'btn-danger' : 'btn-success'" 
-              routerLink="/common-shipment/memoEdit" [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'AIRIMP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">INTERNAL MEMO
-              <span *ngIf="!!mform.get('rec_memo_count')?.value">({{ mform.get('rec_memo_count')?.value }})</span> </button>
+              <app-fileupload *ngIf="gs.IsUserRightsExits('AIR-IMP-ATTACHMENT')"
+                [inputdata]="{mode:'add', id:id, parent_type:'AIR IMPORT', rec_files_count: mform.get('rec_files_count')?.value, rec_files_attached: mform.get('rec_files_attached')?.value}" [button_name]="'ATTACHMENTS'"></app-fileupload>
+              <button *ngIf="gs.IsUserRightsExits('AIR-IMP-FOLLOWUP')" class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/followupEdit"
+                [queryParams]="{id : 0 ,mode:'add', menuid:'AIR-IMP-FOLLOWUP', type:'AIR-IMP-FOLLOWUP', appid: appid, parent_id: mform.get('mbl_id')?.value, parent_type:mform.get('mbl_mode')?.value}">ADD TO FOLLOW UP</button>
+              <button *ngIf="gs.IsUserRightsExits('AIR-IMP-M-MEMO')" class="btn btn-sm" [ngClass]="(mform.get('rec_memo_attached')?.value === 'Y') ? 'btn-danger' : 'btn-success'" 
+                routerLink="/common-shipment/memoEdit" [queryParams]="{ id:0, mode: 'add',menuid:'AIR-IMP-M-MEMO', type: 'AIR-IMP-M-MEMO', appid: appid, parent_id: mform.get('mbl_id')?.value,parent_type:'AIRIMP-CNTR-MEMO'}">INTERNAL MEMO
+                <span *ngIf="!!mform.get('rec_memo_count')?.value">({{ mform.get('rec_memo_count')?.value }})</span> </button>
               <button class="btn btn-success btn-sm">REQUEST FOR APPROVAL</button>
             </div>
           </div>
