--- a/src/app/airimport/airimport/airimport-search/airimport-search.component.html
+++ b/src/app/airimport/airimport/airimport-search/airimport-search.component.html
@@ -24,12 +24,8 @@
     <div class="col-sm-6">
       <div class="form-group row">
         <div class="col-sm-12">
-          <label class="form-lable-sm form-label"></label>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-12">
-          <button class="btn btn-sm btn-success" (click)="search('search')">Search</button>
+          <button class="btn btn-sm btn-success me-1" (click)="search('SEARCH')">Search</button>
+          <button class="btn btn-sm btn-success me-1" *ngIf="print" (click)="search('PRINT')">Print</button>
         </div>
       </div>
     </div>
