--- a/src/app/common-shipment/deliveryorder/deliveryorder-search/deliveryorder-search.component.html
+++ b/src/app/common-shipment/deliveryorder/deliveryorder-search/deliveryorder-search.component.html
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-sm-4 form-label form-label-sm" for="">House No#</label>
+        <label class="col-sm-4 form-label form-label-sm" for="">Ref No</label>
         <div class="col-sm-8">
           <app-input type="text" formControlName="do_order_no" [case]="'UPPER'"> </app-input>
         </div>
@@ -23,7 +23,8 @@
     <div class="col-sm-6">
       <div class="form-group row">
         <div class="col-sm-12">
-          <button class="btn btn-sm btn-success" (click)="search('search')">Search</button>
+          <button class="btn btn-sm btn-success me-1" (click)="search('SEARCH')">Search</button>
+          <button class="btn btn-sm btn-success me-1" *ngIf="print" (click)="search('PRINT')">Print</button>
         </div>
       </div>
     </div>
