--- a/src/app/common-shipment/devaninst/devaninst-edit/devaninst-edit.component.html
+++ b/src/app/common-shipment/devaninst/devaninst-edit/devaninst-edit.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="page-header">
-      <h5>{{title}}</h5>
+      <h5>Devanning Instruction</h5><!--{{title}}-->
       <app-history [inputdata]="{table: 'cargo_devan_inst', id:parent_id}"></app-history>
       <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
     </div>
