--- a/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
+++ b/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
@@ -545,7 +545,10 @@
                   [dataSource]="DeliveryList" [valueColumn]="'key'" [displayColumn]="'value'" case="UPPER"></app-combobox>
               </div>
               <div class="col-sm-5">
-                <button class="btn btn-sm btn-success w-100 mb-1">Upload OHBL Or Telex RLS Copy</button>
+                <!-- <button class="btn btn-sm btn-success w-100 mb-1">Upload OHBL Or Telex RLS Copy</button> -->
+                <app-fileupload *ngIf="gs.IsUserRightsExits('SEA-IMP-ATTACHMENT')"
+                  [inputdata]="{mode:'add', id:id, parent_type: 'SEA IMPORT TELEX',
+                  rec_files_count: mform.get('rec_telex_count')?.value, rec_files_attached: mform.get('rec_telex_attached')?.value}" [button_name]="'Upload OHBL Or Telex RLS Copy'"></app-fileupload>
               </div>
             </div>
             <div class="form-group row">
@@ -1079,18 +1082,16 @@
             <button class="btn btn-success btn-sm">ARRIVAL NOTICE(FRT INVOICE)</button>
             <button class="btn btn-success btn-sm">PRE-ADVISE</button>
             <button class="btn btn-success btn-sm">TURNOVER LETTER</button>
-            <button *ngIf="gs.IsUserRightsExits('DELIVERY-ORDER')" class="btn btn-success btn-sm" routerLink="/common-shipment/deliveryorderEdit"
-              [queryParams]="{ parent_id: mform.get('hbl_id')?.value,mode: 'add',parent_type:'SEA-IMPORT-H',menuid:'DELIVERY-ORDER', type: 'DELIVERY-ORDER', appid: appid }"
-              >DELIVERY ORDER</button>
+            <button *ngIf="gs.IsUserRightsExits('SEA-IMPORT-H-DO')" class="btn btn-success btn-sm" routerLink="/common-shipment/deliveryorderEdit"
+              [queryParams]="{mode: 'add', menuid:'SEA-IMPORT-H-DO', type:'SEA-IMPORT-H-DO', appid: appid, parent_id: mform.get('hbl_id')?.value, parent_type:'SEA-IMPORT-H'}">DELIVERY ORDER</button>
             <button *ngIf="gs.IsUserRightsExits('CUSTOM-HOLD')" class="btn btn-success btn-sm" routerLink="/common-shipment/customholdEdit" 
-              [queryParams]="{parent_id: mform.get('hbl_id')?.value, mode: 'add',menuid:'CUSTOM-HOLD', type: 'CUSTOM-HOLD', appid: appid}">US CUSTOM HOLD</button>
-            <button *ngIf="gs.IsUserRightsExits('DEVAN-INSTRUCTION')" class="btn btn-success btn-sm" routerLink="/common-shipment/devaninstEdit"
-              [queryParams]="{ id:0, parent_id: mform.get('hbl_id')?.value,parent_type: mform.get('hbl_mode')?.value, mode: 'add',menuid:'DEVAN-INSTRUCTION', type: 'DEVAN-INSTRUCTION', appid: appid}"
-              >DEVAN / INSTRUCTIONS</button>
-            <button *ngIf="gs.IsUserRightsExits('MEMO')" class="btn btn-sm" [ngClass]="(mform.get('rec_memo_attached')?.value === 'Y') ? 'btn-danger' : 'btn-success'" 
-              routerLink="/common-shipment/memoEdit" [queryParams]="{ id:0, parent_id: mform.get('hbl_id')?.value,parent_type:'SEAIMP-SHIP-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">HOUSE INTERNAL MEMO
+              [queryParams]="{mode: 'add', menuid:'CUSTOM-HOLD', type: 'CUSTOM-HOLD', appid: appid, parent_id: mform.get('hbl_id')?.value}">US CUSTOM HOLD</button>
+            <button *ngIf="gs.IsUserRightsExits('SEA-IMP-H-DEVAN')" class="btn btn-success btn-sm" routerLink="/common-shipment/devaninstEdit"
+              [queryParams]="{ id:0, mode: 'add', menuid:'SEA-IMP-H-DEVAN', type: 'SEA-IMP-H-DEVAN', appid: appid, parent_id: mform.get('hbl_id')?.value,parent_type: mform.get('hbl_mode')?.value}">DEVAN / INSTRUCTIONS</button>
+            <button *ngIf="gs.IsUserRightsExits('SEA-IMP-H-MEMO')" class="btn btn-sm" [ngClass]="(mform.get('rec_memo_attached')?.value === 'Y') ? 'btn-danger' : 'btn-success'" 
+              routerLink="/common-shipment/memoEdit" [queryParams]="{ id:0, mode: 'add',menuid:'SEA-IMP-H-MEMO', type: 'SEA-IMP-H-MEMO', appid: appid, parent_id: mform.get('hbl_id')?.value,parent_type:'SEAIMP-SHIP-MEMO'}">HOUSE INTERNAL MEMO
               <span *ngIf="!!mform.get('rec_memo_count')?.value">({{ mform.get('rec_memo_count')?.value }})</span> </button>
-            <app-genmemo [inputdata]="{id:id, parent_type: mform.get('hbl_mode')?.value ,menuid:'SEA-IMP-RIDER', type: 'SEA-IMP-RIDER', appid: appid}" [button_name]="'RIDER PAGE'" *ngIf="gs.IsUserRightsExits('SEA-IMP-RIDER')"></app-genmemo>
+            <app-genmemo *ngIf="gs.IsUserRightsExits('SEA-IMP-RIDER')" [inputdata]="{id:id, parent_type: mform.get('hbl_mode')?.value ,menuid:'SEA-IMP-RIDER', type: 'SEA-IMP-RIDER', appid: appid}" [button_name]="'RIDER PAGE'"></app-genmemo>
             <button class="btn btn-success btn-sm">PRODUCTS</button>
             <button *ngIf="bAdd || bEdit"  class="btn btn-success btn-sm"(click)="save()"
               [disabled]="mform.invalid">SAVE</button>
