--- a/src/app/shared/fileupload/fileupload.component.html
+++ b/src/app/shared/fileupload/fileupload.component.html
@@ -7,7 +7,7 @@
   <button class="btn btn-sm"
     [ngClass]="(!!data?.rec_files_count || data?.rec_files_attached === 'Y') ? 'btn-danger' : 'btn-success'"
     type="button" (click)="openAttachment()">
-    ATTACHMENTS
+    {{buttonLabel}}
     <span *ngIf="!!data?.rec_files_count">({{ data?.rec_files_count }})</span>
   </button>
 </div>
