--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -16,9 +16,9 @@
   <div class="nav-bar">
     <ul class="nav-links">
 
-      <li><a class="links" routerLink="/home">Home</a></li>
+      <!-- <li><a class="links" routerLink="/home">Home</a></li>
       <li><a class="links" routerLink="/aboutus">About Us</a></li>
-      <li><a class="links" routerLink="/contactus">Contact Us</a></li>
+      <li><a class="links" routerLink="/contactus">Contact Us</a></li> -->
 
       @if( gs.isAutherised()) {
       <li class="dropdown">
