--- a/src/app/shared/history/history.component.html
+++ b/src/app/shared/history/history.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-success btn-sm" type="button" (click)="openHistory()">History</button>
+<button class="btn btn-success btn-sm" (click)="openHistory()">History</button>
