--- a/src/app/accounts/invoicem/invoicem-list/invoicem-list.component.html
+++ b/src/app/accounts/invoicem/invoicem-list/invoicem-list.component.html
@@ -1,15 +1,17 @@
 <div class="page-header">
   <h5>{{title}}</h5>
   <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/accounts/invoicemEdit"
-    [queryParams]="{id :0,mode:'add',menuid:menuid, appid:appid, inv_arap:'A/R', parent_id:this.parent_id , parent_type:this.parent_type}">New A/R</button>
+    [queryParams]="{id :0,mode:'add',menuid:menuid, appid:appid, inv_arap:'A/R', parent_id:this.parent_id , parent_type:this.parent_type}">New
+    A/R</button>
   <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/accounts/invoicemEdit"
-    [queryParams]="{id :0,mode:'add',menuid:menuid, appid:appid, inv_arap:'A/P', parent_id:this.parent_id, parent_type:this.parent_type}">New A/P</button>    
+    [queryParams]="{id :0,mode:'add',menuid:menuid, appid:appid, inv_arap:'A/P', parent_id:this.parent_id, parent_type:this.parent_type}">New
+    A/P</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
 
 <div class="page-search">
-  <app-invoicem-search [search_url]="'/api/accounts/invoicem/GetListAsync'" [input]="ms.getSearchRecord()" [parent_id]="parent_id" 
-  [summary]="ms.getSummaryRecords()" (searchResult)="search($event)"></app-invoicem-search>
+  <app-invoicem-search [search_url]="'/api/accounts/invoicem/GetListAsync'" [input]="ms.getSearchRecord()"
+    [parent_id]="parent_id" [summary]="ms.getSummaryRecords()" (searchResult)="search($event)"></app-invoicem-search>
 </div>
 
 <div class="page-pagination">
@@ -19,10 +21,12 @@
 
 <div class="page-body">
   <app-table [table]="table_data" [data]="ms.getRecords()" (callback_table)="callback_table($event)"
-    [delete_url]="'/api/accounts/invoicem/DeleteAsync'" [sort_column]="ms.sortColumn" [sort_order]="ms.sortOrder"
-    [row_id_name]="'inv_id'" [selected_id]="ms.selectedRow" >
+    (general_callback)="general_callback($event)" [delete_url]="'/api/accounts/invoicem/DeleteAsync'"
+    [sort_column]="ms.sortColumn" [sort_order]="ms.sortOrder" [row_id_name]="'inv_id'" [selected_id]="ms.selectedRow">
   </app-table>
 </div>
+
+
 
 <div class="page-pagination line-bottom">
   <app-page [search_url]="'/api/accounts/invoicem/GetListAsync'" [page]="ms.getPageRecord()"
