--- a/src/app/accounts/acctrans/acctrans-edit/acctrans-edit.component.html
+++ b/src/app/accounts/acctrans/acctrans-edit/acctrans-edit.component.html
@@ -41,19 +41,6 @@
                   [placeholder]="gs.globalConstants.global_date_format"></app-date>
               </div>
             </div>
-            <!-- <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Inv.No</label>
-              <div class="col-sm-4">
-                <app-input maxlength="15" formControlName="jvh_refno" [case]="'UPPER'"></app-input>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Inv.Date</label>
-              <div class="col-sm-4">
-                <app-date formControlName="jvh_refdate" [format]="gs.globalConstants.global_date_format"
-                  [placeholder]="gs.globalConstants.global_date_format"></app-date>
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
@@ -77,7 +64,8 @@
                   <th>TYPE</th>
                   <th>CURR.</th>
                   <th>EX-RATE</th>
-                  <th>TOTAL</th>
+                  <th>DEBIT</th>
+                  <th>CREDIT</th>
                   <th *ngIf="showModel">ORDER</th>
                   <th>DELETE</th>
                 </tr>
@@ -109,7 +97,10 @@
                     <label>{{iRow.get('jv_exrate')?.value}}</label>
                   </td>
                   <td>
-                    <label>{{iRow.get('jv_dcamt')?.value}}</label>
+                    <label>{{iRow.get('jv_drcr')?.value === 'DR' ? iRow.get('jv_dcamt')?.value : 0}}</label>
+                  </td>
+                  <td>
+                    <label>{{iRow.get('jv_drcr')?.value === 'CR' ? iRow.get('jv_dcamt')?.value : 0}}</label>
                   </td>
                   <td *ngIf="showModel">
                     <label>{{iRow.get('jv_ctr')?.value}}</label>
@@ -131,12 +122,8 @@
           </div>
           <div class="col-md-6">
             <div class="form-group row">
-              <label class="col-sm-2 form-label form-lable-sm" for="">Total</label>
-              <div class="col-sm-2">
-                <app-input formControlName="jvh_total" [dec]="this.gs.globalConstants.global_dec_places" type="number" [align]="'right'" [disable]="true"></app-input>
-              </div>
-            <!-- </div>
-            <div class="form-group row"> -->
+              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+
               <label class="col-sm-2 form-label form-lable-sm" for="">Debit</label>
               <div class="col-sm-2">
                 <app-input formControlName="jvh_debit" [dec]="this.gs.globalConstants.global_dec_places" type="number" [align]="'right'" [disable]="true"></app-input>
@@ -152,14 +139,13 @@
 
       <div class="page-body">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-sm-6">
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm" for="">Narration</label>
               <div class="col-sm-8">
-                <app-input maxlength="60" formControlName="jvh_narration" [case]="'UPPER'"></app-input>
+                <app-input maxlength="200" formControlName="jvh_narration" [case]="'UPPER'"></app-input>
               </div>
             </div>
-
           </div>
         </div>
       </div>
