--- a/src/app/accounts/acctrans/acctransd-edit/acctransd-edit.component.html
+++ b/src/app/accounts/acctrans/acctransd-edit/acctransd-edit.component.html
@@ -12,15 +12,19 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-lable-sm" for=""></label>
         <div class="col-sm-8">
-          <app-input maxlength="35" formControlName="jv_acc_name" name="jv_acc_name" [case]="'UPPER'"
-            [disable]="true"></app-input>
+          <app-input maxlength="35" formControlName="jv_acc_name" name="jv_acc_name" [case]="'UPPER'"></app-input>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-4 form-label form-lable-sm" for="">Amount</label>
-        <div class="col-sm-8">
+        <div class="col-sm-3">
           <app-input formControlName="jv_famt" type="number" name="jv_famt"
-            [dec]="this.gs.globalConstants.global_dec_places" [align]="'right'" (blur)="findTotal($event)"></app-input>
+            [dec]="this.gs.globalConstants.global_dec_places" [align]="'right'" (blur)="findTotal($event)" required ></app-input>
+        </div>
+        <label class="col-sm-2 form-label form-lable-sm">Type</label>
+        <div class="col-sm-3">
+          <app-combobox maxlength="30" formControlName="jv_drcr" name="jv_drcr" [dataSource]="TypeList"
+            [valueColumn]="'key'" [displayColumn]="'value'" case="UPPER"></app-combobox>
         </div>
       </div>
       <div class="form-group row">
@@ -30,11 +34,9 @@
             table="param" subtable="currency" [company_id]="getCompanyId()" [url]="url" case="upper"
             display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
         </div>
-      <!-- </div>
-      <div class="form-group row"> -->
         <label class="col-sm-2 form-label form-lable-sm" for="">Ex-Rate</label> 
         <div class="col-sm-3">
-          <app-input [dec]="this.gs.globalConstants.global_exrate_decimal" formControlName="jv_exrate" type="number"
+          <app-input [dec]="this.gs.globalConstants.global_exrate_decimal" formControlName="jv_exrate" name="jv_exrate" type="number" (blur)="findTotal($event)"
             [align]="'right'"></app-input>
         </div>
       </div>
@@ -47,13 +49,6 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <div class="form-group row">
-        <label class="col-sm-4 form-label form-lable-sm">Type</label>
-        <div class="col-sm-8">
-          <app-combobox maxlength="30" formControlName="jv_drcr" name="jv_drcr" [dataSource]="TypeList"
-            [valueColumn]="'key'" [displayColumn]="'value'" case="UPPER"></app-combobox>
-        </div>
-      </div>
       <div class="form-group row">
         <label class="col-sm-4 form-label form-lable-sm">Doc Type</label>
         <div class="col-sm-8">
