--- a/src/app/accounts/invoicem/invoicem-edit/invoicem-edit.component.html
+++ b/src/app/accounts/invoicem/invoicem-edit/invoicem-edit.component.html
@@ -34,7 +34,14 @@
                   [placeholder]="gs.globalConstants.global_date_format"></app-date>
               </div>
             </div>
-
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">Fin-year</label>
+              <div class="col-sm-8">
+                <auto-complete formControlName="inv_year" name="inv_year" id="inv_year" (CallBack)="callBack($event)"
+                  table="year" [company_id]="getCompanyId()" [url]="url" case="upper"
+                  display_column="[{'caption':'CODE','value':'year_code'},{'caption':'NAME','value':'year_name'}]"></auto-complete>
+              </div>
+            </div>
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm">Customer</label>
               <div class="col-sm-3">
